wetter.azure/weather-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: weatherapp
  labels:
    app: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      replicas: 3
      containers:
      - name: weather-azure
        image: backzacc/w902:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: weatherapp
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: weather
