wetter.azure/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weatherapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - wetter.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: wetter.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: weatherapp
          servicePort: 80
